# credit-scoring

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
dags/: credit_scoring_data_quality_dag.py  credit_scoring_retraining_dag.py  credit_scoring_training_dag.py
notebooks/: 01_eda.ipynb
src/credit_scoring/: __init__.py  main.py
src/credit_scoring/modeling/: __init__.py  data_loader.py  evaluate.py  main.py  preprocess.py  train.py
tests/: test_score.py
tests/modeling/: test_data_loader.py  test_main.py  test_training.py
tests/modelling/: test_evaluate.py  test_preprocess.py
tests/modelling/preprocess/: test_preprocess.py
