[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "credit-scoring"
version = "0.1.0"
description = "Python template for credit scoring projects"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Jakub Kostrzewa" }
]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.7.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/credit_scoring"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
