[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "credit-scoring"
version = "0.1.0"
description = "Python template for credit scoring projects"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Jakub Kostrzewa" }
]
dependencies = []

[dependency-groups]
dev = [
  "pre-commit>=4.0",
  "pytest>=8.0",
  "ruff>=0.7.0"
]
modeling = [
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.5"
]
notebook = [
  "ipykernel>=7.0",
  "ipython>=9.0",
  "pandas>=2.2",
  "numpy>=2.0",
  "matplotlib>=3.9",
  "seaborn>=0.13"
]

[tool.hatch.build.targets.wheel]
packages = ["src/credit_scoring"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "RET", "RSE", "S", "T10", "T20", "UP", "RUF100"]
ignore = ["E501", "RET503"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
